# de-week8-github-connector-ifeoluwaadeniyi

./: .gitignore  README.md  main.py  pyproject.toml
github_connector/: __init__.py  client.py  custom_exceptions.py
tests/: test_client.py
